--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-jwt-template",
+  "name": "medisense",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
@@ -7,7 +7,7 @@
     "start": "npx prisma generate && node dist/app.js",
     "postinstall": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon  src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
